# universal-mcp-admin

./: .env.example  .gitignore  EXAMPLES.md  README.md  backup_manager.py  build_cache.py  build_detector.py  config_manager.py  export_manager.py  git_manager.py  import_manager.py  log_manager.py  mcp_manager.py  project_scanner.py  prompt.md  pyproject.toml  requirements.txt  resource_discovery.py  server.py  server_monitor.py  tool_analyzer.py  tool_tester.py
.github/agents/: my-agent.agent.md
